fix: 역할명 중복 체크 로직 수정

--- a/module-admin/src/main/resources/templates/roles/roleView.html
+++ b/module-admin/src/main/resources/templates/roles/roleView.html
@@ -70,6 +70,7 @@
 
 <link rel="stylesheet" type="text/css" th:href="@{/files/assets/pages/treeview/treeview.css}"></link>
 <link rel="stylesheet" type="text/css" th:href="@{/files/bower_components/jstree/dist/themes/default/style.css}"></link>
+<script type="text/javascript" th:src="@{/js/switches.js}"></script>
 <script type="text/javascript" src="/files/bower_components/jstree/dist/jstree.js"></script>
 
 <script th:inline="javascript">
